# carbon-emission-measure-platform

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 기능-요청.md  장애-수정.md
alembic/: env.py
alembic/versions/: 08feea731b10_.py  108c8828d505_extend_user_model.py  110386c118c2_.py  461483858128_.py  4d423b0698c1_.py  800401bc0a21_.py  8384d1189489_init_model.py  84dd0e08e3e6_.py  a7742d87dd7d_.py  ba05f2b40090_.py  bb259e218540_add_company_code_to_company_table.py  c1aab5ca1707_init.py
app/: main.py
app/api/: api.py
app/api/endpoints/: auth.py  company.py  sites.py  users.py
app/api/endpoints/admin/: __init__.py  company.py  project_codes.py  sites.py  user.py  vendor_codes.py
app/bootstrap/: init_seed_user_company.py  init_super_user.py
app/core/: config.py  security.py
app/db/: base.py  base_class.py  session.py
app/decorator/: sites.py  user.py
app/dependencies/: auth.py
app/handlers/: auth.py  companies.py  user.py
app/handlers/admin/: project_code.py  sites.py  vendor_code.py
app/models/: __init__.py  attachment.py  base.py  company.py  enums.py  estimate.py  project_code.py  user.py
app/schemas/: Company.py  EstimateInfo.py  ProjectCode.py  Site.py  Sites.py  VendorCode.py  auth.py  user.py
docker/: development.Dockerfile  production.Dockerfile
docker-compose/: docker-compose.development.yml  docker-compose.production.yml
